# binary_greedy_mesher_demo

./: Cargo.toml  LICENSE  README.md
assets/shaders/: chunk.wgsl  chunk_prepass.wgsl
benches/: chunk.rs  chunks_refs.rs  greedy_mesher.rs  meshing.rs
src/: chunk.rs  chunk_mesh.rs  chunks_refs.rs  constants.rs  culled_mesher.rs  culled_mesher_optimized.rs  face_direction.rs  greedy_mesher.rs  greedy_mesher_optimized.rs  lib.rs  lod.rs  main.rs  quad.rs  rendering.rs  scanner.rs  sun.rs  utils.rs  voxel.rs  voxel_engine.rs
