[package]
name = "new_voxel_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23"
bevy_atmosphere = "0.9"
bevy_flycam = "0.13.0"
bevy_screen_diagnostics = "0.5.0"
bracket-noise = "0.8.7"
futures-lite = "2.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tinyvec = "1.6.0"

[dev-dependencies]
criterion = {version="0.5.1", features = ["html_reports"]}

# [[bench]]
# name = "chunk"
# harness = false

[[bench]]
name = "meshing"
harness = false

# [[bench]]
# name = "chunks_refs"
# harness = false
